@@ -1,11 +1,11 @@
 use Module::Build;
 
 my $build = Module::Build->new(
-	module_name     => 'Symbol::Approx::Sub',
-	dist_version    => '2.04',
-        license         => 'perl',
-        create_makefile => 'traditional',
-        requires        => {
+	module_name        => 'Symbol::Approx::Sub',
+	dist_version       => '2.05',
+        license            => 'perl',
+        create_makefile_pl => 'traditional',
+        requires           => {
 		Devel::Symdump => 0,
 		Test::More     => 0,
 		Test::Pod      => 0,
