@@ -1,6 +1,6 @@
 ---
 name: Symbol-Approx-Sub
-version: 2.04
+version: 2.05
 author:
   - 'Dave Cross <dave@dave.org.uk>'
   - 'With lots of help from Leon Brocard <leon@astray.com>'
