@@ -1,1 +1,16 @@
-# This is an automatically created file
+# Note: this file was auto-generated by Module::Build::Compat version 0.03
+use ExtUtils::MakeMaker;
+WriteMakefile
+(
+          'PL_FILES' => {},
+          'INSTALLDIRS' => 'site',
+          'NAME' => 'Symbol::Approx::Sub',
+          'EXE_FILES' => [],
+          'VERSION_FROM' => 'lib/Symbol/Approx/Sub.pm',
+          'PREREQ_PM' => {
+                           'Test::More' => 0,
+                           'Devel::Symdump' => 0,
+                           'Test::Pod' => 0
+                         }
+        )
+;
