@@ -1,5 +1,4 @@
 
-Symbol::Approx::Sub
 -------------------
 
 NAME
